CloudEditorService/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-editor-ingress
  namespace: cloud-editor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /runner/?(.*)
        pathType: Prefix
        backend:
          service:
            name: runner-service
            port:
              number: 80
      - path: /orchestration/?(.*)
        pathType: Prefix
        backend:
          service:
            name: orchestration-service
            port:
              number: 80
      - path: /init/?(.*)
        pathType: Prefix
        backend:
          service:
            name: initialization-service
            port:
              number: 80
